[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basic"
version = "0.3.0"
description = "A small BASIC interpreter written in Python using SLY."
authors = [
    {name="Cheaterman", email="the.cheaterman@gmail.com"},
]
dependencies = [
  "sly",
]
requires-python = ">= 3.6"
keywords = ["basic", "sly", "lexer", "parser", "interpreter", "qbasic"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development :: Build Tools",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]
