[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["basic"]
# ^ If py-modules is not specified, setuptools will attempt auto-discovery.

[project]
name = "basic"
version = "0.1.0"
# ^ version: See also main.py
description = "A small BASIC interpreter written in Python using SLY."
dependencies = [
  "sly",
]
requires-python = ">=3.6"
# ^ latest 3.6 is 3.6.15 (partial support until 2021)
# NOTE: vscode requires 3.8 for TypeDict (for use vy vscode_pytest extension)
# otherwise: "  .../.vscode/extensions/ms-python.python-2024.10.0-linux-x64/python_files/vscode_pytest/__init__.py", line 18, in <module>
#    from typing import (  # noqa: E402
# ImportError: Error importing plugin "vscode_pytest": cannot import name 'TypedDict'"
# ^ latest 3.8 is 3.8.19 as of July 2024 ("Source-only security fix releases
#   Provided irregularly on an “as-needed” basis until October 2024.")

authors = [
    {name="Cheaterman", email="the.cheaterman@gmail.com"},
]
# license = { file = "LICENSE", text = "MIT License" }
# ^ since license is specified in classifiers, license field is commented as per <https://packaging.python.org/en/latest/guides/writing-pyproject-toml/>
readme = "README.md"
keywords = ["basic", "sly", "lexer", "parser", "interpreter", "qbasic"]
classifiers = [
  # How mature is this project? Common values are
  #   3 - Alpha
  #   4 - Beta
  #   5 - Production/Stable
  "Development Status :: 3 - Alpha",

  # Indicate who your project is intended for
  "Intended Audience :: Developers",
  "Topic :: Software Development",
  "Topic :: Software Development :: Interpreters",

  # Pick your license as you wish (see also "license" above)
  "License :: OSI Approved :: MIT License",

  # Specify the Python versions you support here.
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
]

[project.urls]
Homepage = "https://github.com/Cheaterman/basic"
Documentation = "https://github.com/Cheaterman/basic/README.md"
Repository = "https://github.com/Cheaterman/basic.git"
Issues = "https://github.com/Cheaterman/basic/issues"
# Changelog = "https://github.com/Cheaterman/basic/blob/master/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-cov"
]

# [project.scripts]
# basic = "basic:main"

# [project.gui-scripts]
# basic-gui = "basic:main_gui"